--- a/subsys/bluetooth/host/Kconfig
+++ b/subsys/bluetooth/host/Kconfig
@@ -206,7 +206,7 @@ config BT_L2CAP_TX_MTU
 
 config BT_CONN_TX_MAX
 	int "Maximum number of pending TX buffers"
-	default BT_CTLR_TX_BUFFERS if BT_CTLR
+	default BT_CTLR_TX_BUFFERS if BT_CTLR && BT_SW_LL
 	default 7
 	range 1 128
 	help
